# SynqX

./: .gitignore  GEMINI.md  README.md  a.md  debug_postgres.py  docker-compose.yml  synqx-agent-latest.tar.tar.gz.sha256  synqx.config.json
agent/: .gitignore  diagnose_env.py  install.ps1  install.py  install.sh  main.py  pyproject.toml  requirements.txt
agent/components/: api_client.py
agent/components/handlers/: ephemeral_handler.py  pipeline_handler.py  system_handler.py
agent/engine/: dag.py  executor.py  metrics.py
agent/engine/connectors/: base.py  factory.py
agent/engine/connectors/impl/: __init__.py
agent/engine/connectors/impl/api/: airtable.py  google_sheets.py  graphql.py  rest.py  salesforce.py
agent/engine/connectors/impl/files/: azure_blob.py  gcs.py  local.py  s3.py  sftp.py
agent/engine/connectors/impl/generic/: __init__.py  custom_script.py  dbt.py
agent/engine/connectors/impl/nosql/: cassandra.py  dynamodb.py  elasticsearch.py  kafka.py  mongodb.py  rabbitmq.py  redis.py
agent/engine/connectors/impl/sql/: __init__.py  base.py  bigquery.py  databricks.py  duckdb.py  mariadb.py  mssql.py  mysql.py  oracle.py  postgres.py  redshift.py  snowflake.py  sqlite.py
agent/engine/core/: engine_manager.py  errors.py  sql_generator.py
agent/engine/transforms/: base.py  factory.py  polars_base.py
agent/engine/transforms/impl/: __init__.py  aggregate_transform.py  code_polars.py  code_transform.py  dbt_transform.py  deduplicate_polars.py  deduplicate_transform.py  drop_columns_transform.py  fill_nulls_transform.py  filter_polars.py  filter_transform.py  join_polars.py  join_transform.py  map_transform.py  merge_transform.py  noop_transform.py  pandas_transform.py  regex_replace_transform.py  rename_columns_transform.py  sort_transform.py  type_cast_transform.py  union_transform.py  validate_polars.py  validate_transform.py
agent/engine/utils/: serialization.py
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_enterprise_hardening.py  011376a84e33_add_osdu_and_domain_entity_to_assettype_.py  0625c5fbfd27_add_multi_tenancy_workspaces.py  0bbb65bd5e0b_increase_asset_and_connection_name_.py  246a6bd2d947_add_uppercase_osdu_and_prosource_to_.py  28b3f07a11e1_add_lineage_map_to_step_runs.py  39c2f0a11e2_add_enterprise_ops_fields.py  4003504cb340_rename_runner_group_to_agent_group.py  4759fa44d59e_rename_runners_table_to_agents.py  4917434e378b_add_cdc_support_to_pipeline_nodes.py  4d8b72a4bd18_add_new_job_types_and_ephemeral_jobs_.py  597465b74db5_add_sync_mode_and_quality_profile.py  68a6446e85b2_add_default_runner_group_to_workspaces.py  6a8b2c3d4e5f_add_guardrails_to_pipeline_nodes.py  891b4e5b2172_add_data_reliability_and_staging_fields.py  ada1ce8ad284_add_data_contracts_and_quarantine.py  b415db031078_add_parent_node_id_for_grouping.py  cdde2fe12e08_add_git_config_to_workspaces.py  ce6fae40badb_remove_parent_node_id_grouping.py  d0ad83c148b2_add_osdu_and_prosource_to_connectortype.py  d3db8e25958b_test_lint_fix.py  d42e9567354c_initial_schema.py  ebaf7089e604_initial_schema.py  ece86548416a_add_advanced_orchestration_and_fanout_.py  ed68220481bc_add_runner_secret_hash.py  f6391ce6ac7e_add_runners_table.py  fe65b948b53d_add_audit_logs_table.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: agents.py  ai.py  alerts.py  api_keys.py  audit.py  auth.py  connections.py  dashboard.py  explorer.py  files.py  jobs.py  lineage.py  pipelines.py  websockets.py  workspaces.py
backend/app/connectors/: base.py  factory.py
backend/app/connectors/impl/: __init__.py
backend/app/connectors/impl/api/: airtable.py  graphql.py  rest.py  salesforce.py
backend/app/connectors/impl/files/: azure_blob.py  gcs.py  local.py  s3.py  sftp.py
backend/app/connectors/impl/generic/: __init__.py  custom_script.py  dbt.py
backend/app/connectors/impl/nosql/: cassandra.py  dynamodb.py  elasticsearch.py  kafka.py  mongodb.py  rabbitmq.py  redis.py
backend/app/connectors/impl/sql/: base.py  bigquery.py  databricks.py  postgres.py  sqlite.py
backend/app/core/: cache.py  cache_manager.py  celery_app.py  config.py  db_logging.py  engine_manager.py  errors.py  logging.py  security.py  websockets.py
backend/app/db/: session.py
backend/app/engine/: agent_engine.py  scheduler.py
backend/app/engine/agent_core/: core.py  forensics.py  node_executor.py  sql_generator.py  state_manager.py
backend/app/engine/runner_core/: core.py  forensics.py  node_executor.py  state_manager.py
backend/app/engine/transforms/: base.py  factory.py  polars_base.py
backend/app/engine/transforms/impl/: __init__.py  code_polars.py  dbt_transform.py  deduplicate_polars.py  deduplicate_transform.py  fill_nulls_transform.py  filter_polars.py  filter_transform.py  join_polars.py  merge_transform.py  sort_transform.py  validate_polars.py  validate_transform.py
backend/app/middlewares/: correlation.py
backend/app/models/: __init__.py  agent.py  audit.py  base.py  connections.py  enums.py  environment.py  ephemeral.py  execution.py  explorer.py  monitoring.py  pipelines.py  user.py  workspace.py
backend/app/schemas/: __init__.py  agent.py  alert.py  api_key.py  audit.py  auth.py  connection.py  dashboard.py  ephemeral.py  google_sheets.py  job.py  lineage.py  pipeline.py
backend/app/services/: agent_service.py  alert_service.py  audit_service.py  connection_service.py  dashboard_service.py  dependency_service.py  ephemeral_service.py  gitops_service.py  job_service.py  lineage_service.py  oidc_service.py  pipeline_service.py  vault_service.py
backend/app/utils/: serialization.py
backend/app/worker/: tasks.py
backend/scripts/: synqx_admin.py
libs/synqx-core/: pyproject.toml
libs/synqx-core/src/synqx_core/: __init__.py  errors.py  logging.py
libs/synqx-core/src/synqx_core/models/: __init__.py  agent.py  (+13 more)
libs/synqx-engine/: pyproject.toml
libs/synqx-engine/src/synqx_engine/: __init__.py  dag.py  metrics.py
(+522 files in other folders)
