[project]
name = "synqx-agent"
version = "1.0.0"
description = "Universal Remote Execution Agent for SynqX"
authors = [{ name = "SynqX Team" }]
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "pandas>=2.2.2",
    "sqlalchemy>=2.0.29",
    "python-dotenv>=1.0.1",
    "psutil>=5.9.8",
    "croniter>=2.0.3",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyarrow>=15.0.2",
    "fastparquet>=2024.2.0",
    "openpyxl>=3.1.2",
    "lxml>=5.2.1",
    "psycopg2-binary>=2.9.9",
    "mysql-connector-python>=8.3.0",
    "duckdb>=0.10.1",
    "pymysql>=1.1.0",
    "pymssql>=2.3.0",
    "oracledb>=2.1.0",
    "pymongo>=4.6.3",
    "redis>=5.0.3",
    "cassandra-driver>=3.29.1",
    "boto3>=1.34.80",
    "s3fs>=2024.3.1",
    "google-cloud-storage>=2.16.0",
    "azure-storage-blob>=12.19.1",
    "snowflake-connector-python>=3.8.0",
    "snowflake-sqlalchemy>=1.5.1",
    "google-cloud-bigquery>=3.20.0",
    "databricks-sql-connector>=3.1.0",
    "kafka-python-ng>=2.2.2",
    "pika>=1.3.2",
    "elasticsearch>=8.13.0",
    "paramiko>=3.4.0",
    "deepdiff>=6.7.1",
    "typer>=0.12.0",
    "rich>=13.7.0",
]
requires-python = ">=3.9"

[project.scripts]
synqx-agent = "main:main_cli"

[tool.setuptools]
py-modules = ["main"]
packages = ["engine", "engine.connectors", "engine.transforms"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"