[project]
name = "synqx-core"
version = "1.0.1"
description = "Shared data contracts, models, and errors for Synqx"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true