[project]
name = "synqx-engine"
version = "0.1.0"
description = "Core execution engine and connectors for Synqx"
requires-python = ">=3.10"
dependencies = [
    "synqx-core",
    "pandas>=2.0.0",
    "polars>=0.19.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
synqx-core = { path = "../synqx-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
