[project]
name = "synqx-engine"
version = "1.0.1"
description = "Core execution engine and connectors for Synqx"
requires-python = ">=3.10"
dependencies = [
    "synqx-core",
    "pandas>=2.0.0",
    "polars>=0.19.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
synqx-core = { path = "../synqx-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true